--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "umi": "^3.5.21"
   },
   "devDependencies": {
-    "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
